--- a/portfolio/my_react_portfolio/src/App.css
+++ b/portfolio/my_react_portfolio/src/App.css
@@ -32,6 +32,45 @@
   height: 100%;
 }
 
+.projects-grid {
+  display: flex;
+}
+
+/* contact page css */
+.contact-body {
+  margin: auto;
+  background: grey;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-top: 2em;
+}
+/*  end contact grid css */
+.contact-grid {
+  font-align: center;
+  justify-content: center;
+  width: 80%;
+  height: 550px;
+  background: white;
+  color: black;
+  border: 2px solid red;
+}
+
+.contact-grid h2 {
+  font-family: 'Anton', sans-serif;
+}
+
+.contact-grid hr {
+  border-top: 5px dashed black;
+  width: 50%;
+  margin: auto;
+}
+
+contact-grid {
+  font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
+}
 .profile-image {
   height: 250px;
   padding-top: 5em;
