--- a/portfolio/my_react_portfolio/src/App.css
+++ b/portfolio/my_react_portfolio/src/App.css
@@ -39,7 +39,6 @@
 /* contact page css */
 .contact-body {
   margin: auto;
-  background: grey;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -54,26 +53,32 @@
   height: 550px;
   background: white;
   color: black;
-  border: 2px solid red;
+  margin-bottom: 20px;
 }
 
-.contact-grid h2 {
+.contact-grid h3 {
   font-family: 'Anton', sans-serif;
+  text-align: center;
+}
+
+.contact-grid p {
+  font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
 }
 
 .contact-grid hr {
   border-top: 5px dashed black;
-  width: 50%;
+  width: 60%;
   margin: auto;
 }
 
-contact-grid {
+.contact-grid {
   font-family: 'Oxygen', sans-serif;
   font-weight: bold;
 }
 
 .contact-list i {
-  font-size: '64px';
+  font-size: 64px;
   padding-right: 5rem;
 }
 .profile-image {
@@ -83,6 +88,7 @@ contact-grid {
 
 .profile-banner-text {
   background-color: black;
+  opacity: 0.8;
   width: 70%;
   opacity: 0.9;
   margin: auto;
@@ -109,8 +115,8 @@ contact-grid {
 
 .social-links {
   display: flex;
-  justify-content: space-evenly;
-  width: 20%;
+  justify-content: space-between;
+  width: 50%;
   margin: auto;
 }
 
